<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="24dp"
    android:paddingBottom="12dp">

    <TextView
        android:id="@+id/lblMasteryHeader"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_marginEnd="48dp"
        android:text="@string/page_submit_title_mastery"/>

    <TextView
        android:id="@+id/lblSignificanceHeader"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/lblMasteryHeader"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_marginEnd="12dp"
        android:text="@string/page_submit_title_significance"/>

    <TextView
        android:id="@+id/lblFeelingHeader"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/lblSignificanceHeader"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_marginEnd="12dp"
        android:text="@string/page_submit_title_feeling"/>

</android.support.constraint.ConstraintLayout>